--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
 </li>
  
       <li><a href="#contact" style="color: black;"><i class="fas fa-address-book"></i> ☎️<u>CONTACT US</u></a></li>  
-      <li><a href="#fee-button" id="school-fee " style="color: black;"> 💸<u>FEE PAYMENT</u></a></li>
+      <li>
+  <a href="#FeePayment" style="color: green;">
+    💸<u>FEE PAYMENT</u>
+  </a>
+</li>
     </ul>  
   </nav>    <main>  
     <section id="contact">  
