--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
  
       <li><a href="#contact" style="color: black;"><i class="fas fa-address-book"></i> ☎️<u>CONTACT US</u></a></li>  
       <li>
-  <a href="#FeePayment" style="color: green;">
+  <a href="#FeePayment" style="color: darkblue;">
     💸<u>FEE PAYMENT</u>
   </a>
 </li>
