--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>  
   </header>    <nav>  
     <ul>  
-      <li><a href="#" style="color: darkyellow;"><i class="fas fa-home"></i> 🏠<u>HOME</u></a></li>  
+      <li><a href="#" style="color: #E8C87F;"><i class="fas fa-home"></i> 🏠<u>HOME</u></a></li>  
       <li>  
   <a href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf"   
      target="_blank" rel="noopener noreferrer" style="color: lightyellow;">  
