--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
 </section>
 
   </main>    <footer>  
+    <a href="#top" class="scroll-top">⬆️ Take me up</a>
+
     <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>  
   </footer>  
 </body>  
