--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </main>
 
   <footer>
-    <a href="#top" class="scroll-top">⬆🚀 Fly to Top</a>
+    <a href="#top" class="scroll-top">🚀 Fly to Top</a>
     <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
   </footer>
 </body>
