--- a/index.html
+++ b/index.html
@@ -129,6 +129,16 @@
          📥 ONLINE FEE PAYMENT
       </a>
     </section>
+
+    <br><br>
+
+    <section id="School Official Website">
+      <h2>🌐 OFFICIAL WEBSITE</h2>
+      <a class="glow-button"
+         href="https://deoriasvm.com/">
+         📥 OFFICIAL WEBSITE
+      </a>
+    </section>
   </main>
 
   <footer>
