--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
          📥 OFFICIAL WEBSITE
       </a>
     </section>
+    <br>
+     <section id="TC Request">
+      <h2>🎓 TC REQUEST</h2>
+      <a class="glow-button"
+         href="https://deoriasvm.com/tc-request">
+         📥 TC REQUEST
+      </a>
+    </section>
   </main>
 
   <footer>
