--- a/index.html
+++ b/index.html
@@ -54,13 +54,34 @@
     html {
       scroll-behavior: smooth;
     }
+
+    /* ✅ Header Background with Vidya Bharti Logo */
+    .header-container {
+      background-color: #ff6600; /* Saffron color */
+      background-image: url('https://drive.google.com/uc?export=view&id=16yN6AiNyBNUh8Ct_TKQNh3YziE5IX3y8'); /* Replace with your logo file */
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 150px; /* Adjust as needed */
+      padding: 20px;
+      text-align: center;
+      color: white;
+      border: 5px solid #00ffe7;
+      border-radius: 10px;
+    }
+
+    .school-info h1, 
+    .school-info h2,
+    .school-info p {
+      margin: 5px 0;
+    }
+
   </style>
 </head>
 
 <body id="top"> <!-- ✅ Important: Add id="top" to enable scroll to top -->
   <header>
     <div class="header-container">
-      <img src="logo.png" alt="School Logo" class="logo">
+      <img src="logo.png" alt="School Logo" class="logo" style="display: none;"> <!-- Hide if not needed -->
       <div class="school-info">
         <h1>🕉️ Saraswati Senior Secondary Vidya Mandir</h1>
         <h2>Class 10th - Section F</h2>
@@ -154,4 +175,4 @@
     <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
   </footer>
 </body>
-</html>
+  </html>
