--- a/index.html
+++ b/index.html
@@ -57,16 +57,18 @@
 
     /* ✅ Header Background with Vidya Bharti Logo */
     .header-container {
-      background-color: #ff6600; /* Saffron color */
-      background-image: url('https://drive.google.com/uc?export=view&id=16yN6AiNyBNUh8Ct_TKQNh3YziE5IX3y8'); /* Replace with your logo file */
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: 150px; /* Adjust as needed */
-      padding: 20px;
-      text-align: center;
-      color: white;
-      border: 5px solid #00ffe7;
-      border-radius: 10px;
+  background-color: #ff6600; /* Safron background */
+  background-image: url('https://drive.google.com/uc?export=view&id=16yN6AiNyBNUh8Ct_TKQNh3YziE5IX3y8');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 150px;
+  padding: 20px;
+  text-align: center;
+  color: white;
+  border: 4px solid black;
+  border-radius: 10px;
+  box-shadow: 0 0 15px black, 0 0 30px black; /* Glowing effect */
+    
     }
 
     .school-info h1, 
