--- a/index.html
+++ b/index.html
@@ -1,15 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SSSVM Class 10-F</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>  <style>
+    .rgb-border {
+      position: relative;
+      display: inline-block;
+      padding: 20px;
+      border-radius: 12px;
+      overflow: hidden;
+    }
 
-  <style>
-    /* ✅ Glowing Button CSS */
+    .rgb-border::before {
+      content: '';
+      position: absolute;
+      top: -4px;
+      left: -4px;
+      right: -4px;
+      bottom: -4px;
+      background: conic-gradient(red, orange, yellow, green, cyan, blue, violet, red);
+      border-radius: 15px;
+      z-index: 1;
+      animation: spin 4s linear infinite;
+      filter: blur(4px);
+    }
+
+    .header-container {
+      position: relative;
+      background-color: orange;
+      padding: 20px;
+      border-radius: 12px;
+      z-index: 2;
+      text-align: center;
+      color: white;
+      font-weight: bold;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    /* Existing Button and Nav Styles */
     .glow-button {
       display: inline-block;
       padding: 12px 24px;
@@ -30,7 +70,6 @@
       transform: scale(1.05);
     }
 
-    /* ✅ Scroll-to-top glowing button */
     .scroll-top {
       display: inline-block;
       background-color: #111;
@@ -54,157 +93,66 @@
     html {
       scroll-behavior: smooth;
     }
-
-    /* ✅ Header Background with Vidya Bharti Logo */
-  .header-container {
-  position: relative;
-  padding: 20px;
-  border-radius: 12px;
-  background-color: orange;
-  z-index: 1;
-  overflow: hidden;
-}
-
-/* Outer animated border */
-.header-container::before {
-  content: '';
-  position: absolute;
-  top: -6px;
-  left: -6px;
-  right: -6px;
-  bottom: -6px;
-  border-radius: 15px;
-  background: conic-gradient(
-    red, orange, yellow, green, cyan, blue, violet, red
-  );
-  z-index: -1;
-  animation: spin 3s linear infinite;
-  filter: blur(4px);
-  padding: 5px;
-  mask: 
-    linear-gradient(#000 0 0) content-box, 
-    linear-gradient(#000 0 0);
-  -webkit-mask: 
-    linear-gradient(#000 0 0) content-box, 
-    linear-gradient(#000 0 0);
-  mask-composite: exclude;
-  -webkit-mask-composite: destination-out;
-}
-
-/* Animation for continuous rotation */
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-      }
-
-    .school-info h1, 
-    .school-info h2,
-    .school-info p {
-      margin: 5px 0;
-    }
- 
-  </style>
-</head>
-
-<body id="top"> <!-- ✅ Important: Add id="top" to enable scroll to top -->
+  </style></head>
+<body id="top">
   <header>
-    <div class="header-container">
-      <img src="logo.png" alt="School Logo" class="logo" style="display: none;"> <!-- Hide if not needed -->
-      <div class="school-info">
+    <div class="rgb-border">
+      <div class="header-container">
+        <img src="logo.png" alt="School Logo" class="logo">
         <h1>🕉️ Saraswati Senior Secondary Vidya Mandir</h1>
         <h2>Class 10th - Section F</h2>
         <p><strong>Class Teacher:</strong> Mr. ASHOK YADAV JI</p>
         <p><strong>Developer:</strong> Priyanshu Singh</p>
       </div>
     </div>
-  </header>
-
-  <nav>
+  </header>  <nav>
     <ul>
       <li><a href="#" style="color: #E8C87F;"><i class="fas fa-home"></i> 🏠<u>HOME</u></a></li>
-      <li>
-        <a href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf"
-           target="_blank" rel="noopener noreferrer" style="color: lightyellow;">
-          <i class="fas fa-file-alt"></i> 👨‍🎓<u>STUDENTS LIST</u>
-        </a>
-      </li>
+      <li><a href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf" target="_blank" rel="noopener noreferrer" style="color: lightyellow;"><i class="fas fa-file-alt"></i> 👨‍🎓<u>STUDENTS LIST</u></a></li>
       <li><a href="homework.html" style="color: lightgreen;"><i class="fas fa-book"></i> 📚<u>HOMEWORK</u></a></li>
-      <li>
-        <a href="Notices.html" style="color: pink;">
-          <i class="fas fa-bullhorn"></i> 📢<u>NOTICE</u>
-        </a>
-      </li>
-      <li>
-        <a href="post.html" style="color: lightblue;">
-          <i class="fas fa-pencil-alt"></i> ✍️<u>POSTS</u>
-        </a>
-      </li>
+      <li><a href="Notices.html" style="color: pink;"><i class="fas fa-bullhorn"></i> 📢<u>NOTICE</u></a></li>
+      <li><a href="post.html" style="color: lightblue;"><i class="fas fa-pencil-alt"></i> ✍️<u>POSTS</u></a></li>
       <li><a href="#contact" style="color: black;"><i class="fas fa-address-book"></i> ☎️<u>CONTACT US</u></a></li>
-      <li>
-        <a href="#FeePayment" style="color: #F5DE9C;">
-          💸<u>FEE PAYMENT</u>
-        </a>
-      </li>
+      <li><a href="#FeePayment" style="color: #F5DE9C;">💸<u>FEE PAYMENT</u></a></li>
     </ul>
-  </nav>
-
-  <main>
+  </nav>  <main>
     <section id="contact">
       <h2>📞 CONTACT US</h2>
       <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, Deoria Khas, Deoria (U.P.)</p>
       <p><strong>👨‍🏫 Class Teacher Phone:</strong> <a href="tel:+919451478144">+91 94514 78144</a></p>
       <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919198426858">Chat on WhatsApp</a></p>
       <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
-    </section>
+    </section><br><br>
 
-    <br><br>
+<section id="StudentsList">
+  <h2>📄 STUDENT LIST</h2>
+  <a class="glow-button" href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf" target="_blank" rel="noopener noreferrer">📥 View Student List PDF</a>
+</section>
 
-    <!-- 🔥 Glowing Button Section -->
-    <section id="StudentsList">
-      <h2>📄 STUDENT LIST</h2>
-      <a class="glow-button"
-         href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf"
-         target="_blank" rel="noopener noreferrer">
-         📥 View Student List PDF
-      </a>
-    </section>
+<br>
 
-    <br>
+<section id="FeePayment">
+  <h2>💸 ONLINE FEE PAYMENT</h2>
+  <a class="glow-button" href="https://deoriasvm.com/Student-Login">📥 ONLINE FEE PAYMENT</a>
+</section>
 
-    <section id="FeePayment">
-      <h2>💸 ONLINE FEE PAYMENT</h2>
-      <a class="glow-button"
-         href="https://deoriasvm.com/Student-Login">
-         📥 ONLINE FEE PAYMENT
-      </a>
-    </section>
+<br>
 
-    <br>
+<section id="School Official Website">
+  <h2>🌐 OFFICIAL WEBSITE</h2>
+  <a class="glow-button" href="https://deoriasvm.com/">📥 OFFICIAL WEBSITE</a>
+</section>
 
-    <section id="School Official Website">
-      <h2>🌐 OFFICIAL WEBSITE</h2>
-      <a class="glow-button"
-         href="https://deoriasvm.com/">
-         📥 OFFICIAL WEBSITE
-      </a>
-    </section>
-    <br>
-     <section id="TC Request">
-      <h2>🎓 TC REQUEST</h2>
-      <a class="glow-button"
-         href="https://deoriasvm.com/tc-request">
-         📥 TC REQUEST
-      </a>
-    </section>
-  </main>
+<br>
 
-  <footer>
+<section id="TC Request">
+  <h2>🎓 TC REQUEST</h2>
+  <a class="glow-button" href="https://deoriasvm.com/tc-request">📥 TC REQUEST</a>
+</section>
+
+  </main>  <footer>
     <a href="#top" class="scroll-top">🚀 Fly to Top</a>
     <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
   </footer>
 </body>
-  </html>
+        </html>
