--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
     /* ✅ Header Background with Vidya Bharti Logo */
     .header-container {
-  background-color: #FFA64D; /* Safron background */
+  position: relative;
+  background-color: #FFA64D;
   background-image: url('https://drive.google.com/uc?export=view&id=16yN6AiNyBNUh8Ct_TKQNh3YziE5IX3y8');
   background-repeat: no-repeat;
   background-position: center;
@@ -65,10 +66,36 @@
   padding: 20px;
   text-align: center;
   color: white;
-  border: 4px solid black;
   border-radius: 10px;
-  box-shadow: 0 0 15px black, 0 0 30px black; /* Glowing effect */
-    }
+  overflow: hidden;
+}
+
+.header-container::before {
+  content: "";
+  position: absolute;
+  top: -4px;
+  left: -4px;
+  right: -4px;
+  bottom: -4px;
+  border: 4px solid transparent;
+  border-radius: 10px;
+  box-shadow: 
+    0 0 15px #00ffff,   /* Cyan */
+    0 0 30px #00bfff,   /* Deep Sky Blue */
+    0 0 45px #1e90ff,   /* Dodger Blue */
+    0 0 60px #ff00ff;   /* Magenta/Pink for contrast */
+  animation: rotateBorder 12s linear infinite;
+  pointer-events: none;
+}
+
+@keyframes rotateBorder {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
     }
 
     .school-info h1, 
