--- a/index.html
+++ b/index.html
@@ -51,14 +51,8 @@
       box-shadow: 0 0 15px #00f0ff, 0 0 25px #00f0ff, 0 0 35px #00f0ff;
     }
 
-    html {
-      scroll-behavior: smooth;
-    }
-
-    /* ✅ Header Background with Vidya Bharti Logo */
     .header-container {
-  position: relative;
-  background-color: #FFA64D;
+  background-color: #FFA64D; /* Safron background */
   background-image: url('https://drive.google.com/uc?export=view&id=16yN6AiNyBNUh8Ct_TKQNh3YziE5IX3y8');
   background-repeat: no-repeat;
   background-position: center;
@@ -66,36 +60,16 @@
   padding: 20px;
   text-align: center;
   color: white;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.header-container::before {
-  content: "";
-  position: absolute;
-  top: -4px;
-  left: -4px;
-  right: -4px;
-  bottom: -4px;
-  border: 4px solid transparent;
+  border: 4px solid transparent; /* Border transparent kiya glow dikhane ke liye */
   border-radius: 10px;
   box-shadow: 
-    0 0 15px #00ffff,   /* Cyan */
-    0 0 30px #00bfff,   /* Deep Sky Blue */
-    0 0 45px #1e90ff,   /* Dodger Blue */
-    0 0 60px #ff00ff;   /* Magenta/Pink for contrast */
-  animation: rotateBorder 12s linear infinite;
-  pointer-events: none;
-}
-
-@keyframes rotateBorder {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
+    0 0 15px red,
+    0 0 30px green,
+    0 0 45px blue,
+    0 0 60px red,
+    0 0 75px green,
+    0 0 90px blue; /* RGB glow layers */
+    }
     }
 
     .school-info h1, 
