--- a/index.html
+++ b/index.html
@@ -50,26 +50,20 @@
       color: #111;
       box-shadow: 0 0 15px #00f0ff, 0 0 25px #00f0ff, 0 0 35px #00f0ff;
     }
-
-    .header-container {
-  background-color: #FFA64D; /* Safron background */
-  background-image: url('https://drive.google.com/uc?export=view&id=16yN6AiNyBNUh8Ct_TKQNh3YziE5IX3y8');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 150px;
-  padding: 20px;
-  text-align: center;
-  color: white;
-  border: 4px solid transparent; /* Border transparent kiya glow dikhane ke liye */
-  border-radius: 10px;
-  box-shadow: 
-    0 0 15px red,
-    0 0 30px green,
-    0 0 45px blue,
-    0 0 60px red,
-    0 0 75px green,
-    0 0 90px blue; /* RGB glow layers */
-    }
+.header-container {
+background-color: #FFA64D; /* Safron background /
+background-image: url('https://drive.google.com/uc?export=view&id=16yN6AiNyBNUh8Ct_TKQNh3YziE5IX3y8');
+background-repeat: no-repeat;
+background-position: center;
+background-size: 150px;
+padding: 20px;
+text-align: center;
+color: white;
+border: 4px solid black;
+border-radius: 10px;
+box-shadow: 0 0 15px black, 0 0 30px black; / Glowing effect */
+}
+    
     }
 
     .school-info h1, 
