--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       display: inline-block;
       padding: 12px 24px;
       font-size: 16px;
-      font-weight: 600;
+      font-weight: 600; 
       color: white;
       background-color: #007bff;
       border: none;
@@ -50,21 +50,21 @@
       color: #111;
       box-shadow: 0 0 15px #00f0ff, 0 0 25px #00f0ff, 0 0 35px #00f0ff;
     }
-.header-container {
-background-color: #FFA64D; /* Safron background /
-background-image: url('https://drive.google.com/uc?export=view&id=16yN6AiNyBNUh8Ct_TKQNh3YziE5IX3y8');
-background-repeat: no-repeat;
-background-position: center;
-background-size: 150px;
-padding: 20px;
-text-align: center;
-color: white;
-border: 4px solid black;
-border-radius: 10px;
-box-shadow: 0 0 15px black, 0 0 30px black; / Glowing effect */
-}
-    
+
+    .header-container {
+  background-color: #FFA64D; /* Safron background */
+  background-image: url('https://drive.google.com/uc?export=view&id=16yN6AiNyBNUh8Ct_TKQNh3YziE5IX3y8');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 150px;
+  padding: 20px;
+  text-align: center;
+  color: white;
+  border: 4px solid black;
+  border-radius: 10px;
+  box-shadow: 0 0 15px black, 0 0 30px black; /* Glowing effect */
     }
+    
 
     .school-info h1, 
     .school-info h2,
