--- a/index.html
+++ b/index.html
@@ -52,33 +52,31 @@
     }
 
     .header-container {
-  background-color: #FFA64D; /* Safron background */
-  background-image: url('https://drive.google.com/uc?export=view&id=16yN6AiNyBNUh8Ct_TKQNh3YziE5IX3y8');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 150px;
-  padding: 20px;
-  text-align: center;
-  color: white;
-  border: 4px solid black;
-  border-radius: 10px;
-  box-shadow: 0 0 15px black, 0 0 30px black; /* Glowing effect */
+      background-color: #FFA64D; /* Safron background */
+      background-image: url('https://drive.google.com/uc?export=view&id=16yN6AiNyBNUh8Ct_TKQNh3YziE5IX3y8');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 150px;
+      padding: 20px;
+      text-align: center;
+      color: white;
+      border: 4px solid black;
+      border-radius: 10px;
+      box-shadow: 0 0 15px black, 0 0 30px black;
     }
-    
 
     .school-info h1, 
     .school-info h2,
     .school-info p {
       margin: 5px 0;
     }
-
   </style>
 </head>
 
-<body id="top"> <!-- ✅ Important: Add id="top" to enable scroll to top -->
+<body id="top">
   <header>
     <div class="header-container">
-      <img src="logo.png" alt="School Logo" class="logo" style="display: none;"> <!-- Hide if not needed -->
+      <img src="logo.png" alt="School Logo" class="logo" style="display: none;">
       <div class="school-info">
         <h1>🕉️ Saraswati Senior Secondary Vidya Mandir</h1>
         <h2>Class 10th - Section F</h2>
@@ -118,17 +116,6 @@
   </nav>
 
   <main>
-    <section id="contact">
-      <h2>📞 CONTACT US</h2>
-      <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, Deoria Khas, Deoria (U.P.)</p>
-      <p><strong>👨‍🏫 Class Teacher Phone:</strong> <a href="tel:+919451478144">+91 94514 78144</a></p>
-      <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919198426858">Chat on WhatsApp</a></p>
-      <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
-    </section>
-
-    <br><br>
-
-    <!-- 🔥 Glowing Button Section -->
     <section id="StudentsList">
       <h2>📄 STUDENT LIST</h2>
       <a class="glow-button"
@@ -157,14 +144,28 @@
          📥 OFFICIAL WEBSITE
       </a>
     </section>
+
     <br>
-     <section id="TC Request">
+
+    <section id="TC Request">
       <h2>🎓 TC REQUEST</h2>
       <a class="glow-button"
          href="https://deoriasvm.com/tc-request">
          📥 TC REQUEST
       </a>
     </section>
+
+    <br><br>
+
+    <!-- ✅ Contact Us Section moved to end, before footer -->
+    <section id="contact">
+      <h2>📞 CONTACT US</h2>
+      <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, Deoria Khas, Deoria (U.P.)</p>
+      <p><strong>👨‍🏫 Class Teacher Phone:</strong> <a href="tel:+919451478144">+91 94514 78144</a></p>
+      <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919198426858">Chat on WhatsApp</a></p>
+      <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
+    </section>
+
   </main>
 
   <footer>
@@ -172,4 +173,4 @@
     <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
   </footer>
 </body>
-    </html>
+  </html>
