--- a/index.html
+++ b/index.html
@@ -2,19 +2,94 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SSSVM Class 10-F</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@700;900&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
   <style>
-    /* ✅ Glowing Button CSS */
-    .glow-button {
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      background-color: #fff1cc;
+      color: #222;
+    }
+
+    .header-container {
+      background-color: #FFA64D;
+      background-image: url('https://drive.google.com/uc?export=view&id=17C1FKTJVrySCL1So9OEoT24-Jvl1RWkS');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+      padding: 25px;
+      text-align: center;
+      border: 4px solid black;
+      border-radius: 10px;
+      box-shadow: 0 0 15px black;
+    }
+
+    .school-info h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 3rem;
+      color: #000000;
+      font-weight: 900;
+      margin: 10px 0 15px 0;
+      text-transform: uppercase;
+    }
+
+    .school-info h2,
+    .school-info p {
+      color: #041029;
+      font-weight: 600;
+      margin: 6px 0;
+    }
+
+    nav {
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    .nav-buttons {
+      list-style: none;
+      padding: 10px;
+      margin: 20px auto 30px auto;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 12px 16px; /* vertical and horizontal spacing */
+      justify-content: center;
+    }
+
+    .nav-buttons .btn {
+      margin: 6px;
       display: inline-block;
+      padding: 10px 18px;
+      border-radius: 8px;
+      font-weight: 600;
+      text-decoration: none;
+      transition: 0.3s;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      font-size: 14px;
+    }
+
+    .btn-home { background: #a0c4ff; }
+    .btn-students { background: #caffbf; }
+    .btn-homework { background: #ffd6a5; }
+    .btn-notice { background: #ffadad; }
+    .btn-posts { background: #cdb4db; }
+    .btn-contact { background: #b5ead7; }
+    .btn-fee { background: #ffffb5; }
+
+    .btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 12px rgba(0,0,0,0.3);
+    }
+
+    .glow-button {
       padding: 12px 24px;
       font-size: 16px;
-      font-weight: 600; 
+      font-weight: 600;
       color: white;
       background-color: #007bff;
       border: none;
@@ -30,7 +105,6 @@
       transform: scale(1.05);
     }
 
-    /* ✅ Scroll-to-top glowing button */
     .scroll-top {
       display: inline-block;
       background-color: #111;
@@ -41,34 +115,42 @@
       font-weight: bold;
       font-size: 16px;
       margin: 30px auto;
-      box-shadow: 0 0 10px #00f0ff, 0 0 20px #00f0ff, 0 0 30px #00f0ff;
+      box-shadow: 0 0 15px #00f0ff;
       transition: 0.3s ease-in-out;
+      cursor: pointer;
     }
 
     .scroll-top:hover {
       background-color: #00f0ff;
       color: #111;
-      box-shadow: 0 0 15px #00f0ff, 0 0 25px #00f0ff, 0 0 35px #00f0ff;
     }
 
-    .header-container {
-      background-color: #FFA64D; /* Safron background */
-      background-image: url('https://drive.google.com/uc?export=view&id=16yN6AiNyBNUh8Ct_TKQNh3YziE5IX3y8');
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: 150px;
+    #contact {
+      max-width: 600px;
+      margin: 0 auto 50px auto;
       padding: 20px;
-      text-align: center;
-      color: white;
-      border: 4px solid black;
-      border-radius: 10px;
-      box-shadow: 0 0 15px black, 0 0 30px black;
+      border: 2px solid #ccc;
+      border-radius: 12px;
+      background-color: #fffdf3;
     }
 
-    .school-info h1, 
-    .school-info h2,
-    .school-info p {
-      margin: 5px 0;
+    #contact h2 {
+      text-align: center;
+      margin-bottom: 15px;
+    }
+
+    #contact p {
+      font-size: 16px;
+      margin: 8px 0;
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px;
+      border-top: 1px solid #ccc;
+      font-size: 14px;
+      color: #666;
+      margin-bottom: 30px;
     }
   </style>
 </head>
@@ -76,9 +158,8 @@
 <body id="top">
   <header>
     <div class="header-container">
-      <img src="logo.png" alt="School Logo" class="logo" style="display: none;">
       <div class="school-info">
-        <h1>🕉️ Saraswati Senior Secondary Vidya Mandir</h1>
+        <h1>🕉️<br> Saraswati Senior Secondary Vidya Mandir</h1>
         <h2>Class 10th - Section F</h2>
         <p><strong>Class Teacher:</strong> Mr. ASHOK YADAV JI</p>
         <p><strong>Developer:</strong> Priyanshu Singh</p>
@@ -87,77 +168,46 @@
   </header>
 
   <nav>
-    <ul>
-      <li><a href="#" style="color: #E8C87F;"><i class="fas fa-home"></i> 🏠<u>HOME</u></a></li>
-      <li>
-        <a href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf"
-           target="_blank" rel="noopener noreferrer" style="color: lightyellow;">
-          <i class="fas fa-file-alt"></i> 👨‍🎓<u>STUDENTS LIST</u>
-        </a>
-      </li>
-      <li><a href="homework.html" style="color: lightgreen;"><i class="fas fa-book"></i> 📚<u>HOMEWORK</u></a></li>
-      <li>
-        <a href="Notices.html" style="color: pink;">
-          <i class="fas fa-bullhorn"></i> 📢<u>NOTICE</u>
-        </a>
-      </li>
-      <li>
-        <a href="post.html" style="color: lightblue;">
-          <i class="fas fa-pencil-alt"></i> ✍️<u>POSTS</u>
-        </a>
-      </li>
-      <li><a href="#contact" style="color: black;"><i class="fas fa-address-book"></i> ☎️<u>CONTACT US</u></a></li>
-      <li>
-        <a href="#FeePayment" style="color: #F5DE9C;">
-          💸<u>FEE PAYMENT</u>
-        </a>
-      </li>
+    <ul class="nav-buttons">
+      <li><a href="#" class="btn btn-home"><i class="fas fa-home"></i> 🏠 HOME</a></li>
+      <li><a href="https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf" class="btn btn-students" target="_blank"><i class="fas fa-file-alt"></i> 👨‍🎓 STUDENTS LIST</a></li>
+      <li><a href="homework.html" class="btn btn-homework"><i class="fas fa-book"></i> 📚 HOMEWORK</a></li>
+      <li><a href="Notices.html" class="btn btn-notice"><i class="fas fa-bullhorn"></i> 📢 NOTICE</a></li>
+      <li><a href="post.html" class="btn btn-posts"><i class="fas fa-pencil-alt"></i> ✍️ POSTS</a></li>
+      <li><a href="#contact" class="btn btn-contact"><i class="fas fa-address-book"></i> ☎️ CONTACT</a></li>
+      <li><a href="#FeePayment" class="btn btn-fee"><i class="fas fa-money-bill-wave"></i> 💸 FEE PAYMENT</a></li>
     </ul>
   </nav>
 
   <main>
     <section id="StudentsList">
       <h2>📄 STUDENT LIST</h2>
-      <a class="glow-button"
-         href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf"
-         target="_blank" rel="noopener noreferrer">
-         📥 View Student List PDF
-      </a>
+      <a class="glow-button" href="https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf" target="_blank">📥 View Student List PDF</a>
     </section>
 
-    <br>
+    <br />
 
     <section id="FeePayment">
       <h2>💸 ONLINE FEE PAYMENT</h2>
-      <a class="glow-button"
-         href="https://deoriasvm.com/Student-Login">
-         📥 ONLINE FEE PAYMENT
-      </a>
+      <a class="glow-button" href="https://deoriasvm.com/Student-Login">📥 ONLINE FEE PAYMENT</a>
     </section>
 
-    <br>
+    <br />
 
     <section id="School Official Website">
       <h2>🌐 OFFICIAL WEBSITE</h2>
-      <a class="glow-button"
-         href="https://deoriasvm.com/">
-         📥 OFFICIAL WEBSITE
-      </a>
+      <a class="glow-button" href="https://deoriasvm.com/">📥 OFFICIAL WEBSITE</a>
     </section>
 
-    <br>
+    <br />
 
     <section id="TC Request">
       <h2>🎓 TC REQUEST</h2>
-      <a class="glow-button"
-         href="https://deoriasvm.com/tc-request">
-         📥 TC REQUEST
-      </a>
+      <a class="glow-button" href="https://deoriasvm.com/tc-request">📥 TC REQUEST</a>
     </section>
 
-    <br><br>
+    <br /><br />
 
-    <!-- ✅ Contact Us Section moved to end, before footer -->
     <section id="contact">
       <h2>📞 CONTACT US</h2>
       <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, Deoria Khas, Deoria (U.P.)</p>
@@ -165,7 +215,6 @@
       <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919198426858">Chat on WhatsApp</a></p>
       <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
     </section>
-
   </main>
 
   <footer>
@@ -173,4 +222,4 @@
     <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
   </footer>
 </body>
-  </html>
+</html>
