--- a/index.html
+++ b/index.html
@@ -23,19 +23,21 @@
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
-      padding: 25px;
+      padding: 15px 10px; /* chhota padding */
       text-align: center;
-      border: 4px solid black;
-      border-radius: 10px;
-      box-shadow: 0 0 15px black;
+      border: 3px solid black;
+      border-radius: 8px;
+      /* black glow effect */
+      box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.5);
+      margin: 15px;
     }
 
     .school-info h1 {
       font-family: 'Playfair Display', serif;
-      font-size: 3rem;
+      font-size: 2.2rem; /* chhota font size */
       color: #000000;
       font-weight: 900;
-      margin: 10px 0 15px 0;
+      margin: 8px 0 12px 0;
       text-transform: uppercase;
     }
 
@@ -43,7 +45,8 @@
     .school-info p {
       color: #041029;
       font-weight: 600;
-      margin: 6px 0;
+      margin: 5px 0;
+      font-size: 0.95rem; /* halka chhota */
     }
 
     nav {
@@ -98,6 +101,7 @@
       box-shadow: 0 0 10px #007bff, 0 0 20px #007bff;
       transition: 0.3s ease-in-out;
       margin-top: 10px;
+      display: inline-block;
     }
 
     .glow-button:hover {
