--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     .btn-posts { background: #cdb4db; }
     .btn-contact { background: #b5ead7; }
     .btn-fee { background: #ffffb5; }
+    .btn-books { background: #d0f4de; } /* New Books button */
 
     .btn:hover {
       transform: scale(1.05);
@@ -157,7 +158,7 @@
     }
 
     .main-box {
-      background-color: #ffdb99; /* Slightly darker than before */
+      background-color: #ffdb99;
       border: 3px solid #000;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
@@ -194,6 +195,7 @@
       <li><a href="homework.html" class="btn btn-homework"><i class="fas fa-book"></i> 📚 HOMEWORK</a></li>
       <li><a href="Notices.html" class="btn btn-notice"><i class="fas fa-bullhorn"></i> 📢 NOTICE</a></li>
       <li><a href="post.html" class="btn btn-posts"><i class="fas fa-pencil-alt"></i> ✍️ POSTS</a></li>
+      <li><a href="books.html" class="btn btn-books"><i class="fas fa-book-open"></i> 📖 BOOKS</a></li> <!-- NEW BUTTON -->
       <li><a href="#contact" class="btn btn-contact"><i class="fas fa-address-book"></i> ☎️ CONTACT</a></li>
       <li><a href="#FeePayment" class="btn btn-fee"><i class="fas fa-money-bill-wave"></i> 💸 FEE PAYMENT</a></li>
     </ul>
@@ -244,4 +246,4 @@
     <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
   </footer>
 </body>
-        </html>
+</html>
